--- a/views/profile.erb
+++ b/views/profile.erb
@@ -12,6 +12,6 @@
  </section>
   <div style="clear:both"></div>
   <section id="details">
-    <p><%= @profile.bio %></p>
+    <%= @profile.bio %>
   </section>
 </section>
