--- a/views/layout.erb
+++ b/views/layout.erb
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="initial-scale=1.0, width=device-width">
   <title><%= @title %></title>
   <link href='http://fonts.googleapis.com/css?family=Bevan&v1' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold' rel='stylesheet' type='text/css'>
