changed subtitle from string to text to increase length of savable subtitle, some other small tweaks

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -55,7 +55,7 @@ p { margin: 1em 0em; font-size: 1em; line-height: 1.75em; }
 
 #profile figure#avatar
 {
-  padding:1em;
+  padding:2%;
   margin: 0 0 0 0;
   border: 1px solid #e3e3e3;
   width:25%;
