--- a/views/profile.erb
+++ b/views/profile.erb
@@ -2,6 +2,7 @@
   <section id="overview">
     <figure id="avatar">
       <img src="<%= @avatar %>" alt="<%= @profile.title %>" />
+      <figcaption><%= @profile.caption %></figcaption>
     </figure>
     <section id="info">
       <h1 id="fittext"><%= @profile.title %></h1>
