--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,7 +40,8 @@
 
   <script src="/js/jquery.fittext.js"></script> 
   <script> 
-    $("#profile h1, #profile h2, #profile h3").fitText(0.9);
+    $("#profile h1, #profile h3").fitText(0.9);
+	$('#profile h2').fitText(2.2);
   </script>
 </body>
 </html>
