--- a/views/links.erb
+++ b/views/links.erb
@@ -1,4 +1,4 @@
-<section class="module" id="links">
+<section class="module links">
   <% if @links.count > 0 %>
     <ul>
       <% @links.each do |l| %>
