--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,12 +1,16 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!-- Meta Info -->
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
+  <meta name="description" content="<%= @subtitle %>">
   <title><%= @title %></title>
+  
+  <!-- Styles -->
   <link href='http://fonts.googleapis.com/css?family=Bevan&v1' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Droid+Sans&v1' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
 
@@ -17,11 +21,9 @@
   <!--[if lt IE 9]>
   <script src="/js/html5shiv.js"></script>
   <![endif]-->
-  <script src="/js/jquery-1.6.1.min.js"></script>
-
-
 </head>
 <body>
+  <!-- Flash Notices -->
   <% unless flash.nil? %>
   <section id="notices">
     <% unless flash[:notice].nil? %>
@@ -32,16 +34,20 @@
     <% end %>
   </section>
   <% end %>
+
+  <!-- Content -->
   <%= yield %>
+
+  <!-- Scripts -->
+  <script src="/js/jquery-1.6.1.min.js"></script>
+  <script src="/js/jquery.fittext.js"></script> 
+  <script> 
+    $("#profile h1, #profile h3").fitText(0.9);
+	$('#profile h2').fitText(2.3);
+  </script>
 
   <% if @dotme %>
     <script src="/js/configbar.js"></script>
   <% end %>
-
-  <script src="/js/jquery.fittext.js"></script> 
-  <script> 
-    $("#profile h1, #profile h3").fitText(0.9);
-	$('#profile h2').fitText(2.2);
-  </script>
 </body>
 </html>
