added respond.js, fixed a padding issue, removed unused margins on headings

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -40,6 +40,7 @@
 
   <!-- Scripts -->
   <script src="/js/jquery-1.6.1.min.js"></script>
+  <script src="/js/respond.min.js"></script>
   <script src="/js/jquery.fittext.js"></script> 
   <script> 
     $("#profile h1, #profile h3").fitText(0.9);
