--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,9 +18,9 @@ img { max-width: 100%; }
 h1{ font-size: 4em; font-family: 'Bevan'; width: 100%; text-shadow: 1px 1px 1px rgba(255,255,255,1); line-height: 1.5em; }
 h2{ font-size: 1.5em; margin: 0 0 0.5em; text-shadow: 1px 1px 1px rgba(255,255,255,1); line-height: 1.5em;}
 h3{ font-size: 1.25em; margin: 0 0; text-transform: uppercase; font-family: 'Bevan'; width: 65%; opacity: 0.5; text-shadow: 1px 1px 1px rgba(255,255,255,1); line-height: 1.5em; }
-h4{ font-size: 1.75em; margin: .125em 0; }
-h5{ font-size: 1.50em; margin: .25em 0; }
-h6{ font-size: 1.25em; margin: .375em 0;}
+h4{ font-size: 1.75em; }
+h5{ font-size: 1.50em; }
+h6{ font-size: 1.25em; }
 p { margin: 1em 0; font-size: 1em; line-height: 1.75em; }
 /* @end */
 
@@ -40,7 +40,7 @@ p { margin: 1em 0; font-size: 1em; line-height: 1.75em; }
 
 #profile #overview
 {
-  padding: 0 0 5%;
+  padding: 0 0 2em;
   border-bottom: 1px dashed #e3e3e3;
 }
 
