--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="initial-scale=1.0, width=device-width">
-  <meta name="description" content="<%= @subtitle %>">
-  <title><%= @title %></title>
+  <meta name="description" content="<%= @profile.subtitle %>">
+  <title><%= @profile.title %></title>
   
   <!-- Styles -->
   <link href='http://fonts.googleapis.com/css?family=Bevan&v1' rel='stylesheet' type='text/css'>
